maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: not found: value returnbaMurOuest
      returnbaMurOuest(x+1,y)
      ^